# angle-rs

./: .gitignore  README.md
client/: Cargo.toml
common/: Cargo.toml  build.rs  netdata.proto
common/src/: lib.rs  main.rs  net.rs  netdata.proto  netdata.rs
server/: Cargo.toml
